--- a/web/src/app/Components/home/home.component.html
+++ b/web/src/app/Components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="relative overflow-hidden bg-white">
+<div class="relative overflow-hidden bg-white scroll-smooth">
   <div class="mx-auto max-w-7xl">
     <div class="relative z-10 bg-white pb-8 sm:pb-16 md:pb-20 lg:w-full lg:max-w-2xl lg:pb-28 xl:pb-32">
       <svg class="absolute inset-y-0 right-0 hidden h-full w-48 translate-x-1/2 transform text-white lg:block"
@@ -11,7 +11,7 @@
             <div class="flex flex-shrink-0 flex-grow items-center lg:flex-grow-0">
               <div class="flex w-full items-center justify-between md:w-auto">
                 <a href="#">
-                  <span class="sr-only">Your Company</span>
+                  <span class="sr-only">Glorious</span>
                   <img alt="Your Company" class="h-8 w-auto sm:h-10" src="../../../assets/images/logo.png">
                 </a>
                 <div class="-mr-2 flex items-center md:hidden">
@@ -19,7 +19,6 @@
                     class="inline-flex items-center justify-center rounded-md bg-white p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500"
                     aria-expanded="false">
                     <span class="sr-only">Open main menu</span>
-                    <!-- Heroicon name: outline/bars-3 -->
                     <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                       stroke-width="1.5" stroke="currentColor" aria-hidden="true">
                       <path stroke-linecap="round" stroke-linejoin="round"
@@ -59,12 +58,14 @@
               <div class="space-y-1 px-2 pt-2 pb-3">
                 <a routerLink="/"
                   class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Home</a>
-  
+
                 <a href="#about"
-                  class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">About Us</a>
-  
+                  class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">About
+                  Us</a>
+
                 <a href="#contact"
-                  class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Contact Us</a>
+                  class="block rounded-md px-3 py-2 text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-gray-900">Contact
+                  Us</a>
               </div>
               <a routerLink="/login"
                 class="block w-full bg-gray-50 px-5 py-3 text-center font-medium text-indigo-600 hover:bg-gray-100">Log
@@ -77,8 +78,8 @@
       <main class="mx-auto mt-10 max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
         <div class="sm:text-center lg:text-left">
           <h1 class="text-4xl font-bold tracking-tight text-gray-900 sm:text-5xl md:text-6xl">
-            <span class="block xl:inline">Data to enrich your</span>
-            <span class="block text-indigo-600 xl:inline">online business</span>
+            <span class="block xl:inline">Learn and teach in </span>
+            <span class="block text-indigo-600 xl:inline">Glorious Future School</span>
           </h1>
           <p class="mt-3 text-base text-gray-500 sm:mx-auto sm:mt-5 sm:max-w-xl sm:text-lg md:mt-5 md:text-xl lg:mx-0">
             Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet
@@ -102,12 +103,28 @@
   </div>
 </div>
 
+<!-- information -->
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto pt-12 pb-6 px-4 sm:px-6 lg:px-8">
+    <div class="lg:text-center">
+      <p class="mt-2 text-2xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-3xl">
+          The Glorious Future School
+      </p>
+      <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sunt autem necessitatibus. Quisquam
+        voluptas laboriosam fugiat.
+      </p>
+    </div>
+  </div>
+</div>
+
+
 <!-- about us -->
 <div class="bg-white" id="about">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
-      <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">About Us</h2>
-      <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+      <h2 class="text-3xl md:text-4xl text-indigo-600 font-semibold tracking-wide uppercase">About Us</h2>
+      <p class="mt-2 text-2xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-3xl">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in,
         accusamus quisquam.
       </p>
@@ -184,11 +201,11 @@
 </div>
 
 <!-- contact us -->
-<div class="bg-gray-50" id="contact">
+<div class="bg-white" id="contact">
   <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
-      <h2 class="text-base text-indigo-600 font-semibold tracking-wide uppercase">Contact Us</h2>
-      <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+      <h2 class="text-3xl md:text-4xl text-indigo-600 font-semibold tracking-wide uppercase">Contact Us</h2>
+      <p class="mt-2 text-2xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-3xl">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus magnam voluptatum cupiditate veritatis in,
         accusamus quisquam.
       </p>
@@ -236,28 +253,28 @@
                 <label for="first_name" class="block text-sm font-medium text-gray-700">First name</label>
                 <div class="mt-1">
                   <input type="text" name="first_name" id="first_name" autocomplete="given-name"
-                    class="py-3 px-4 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    class="py-3 px-4 block bg-gray-100 w-full shadow-sm sm:text-sm border-gray-700 rounded-md">
                 </div>
               </div>
               <div>
                 <label for="last_name" class="block text-sm font-medium text-gray-700">Last name</label>
                 <div class="mt-1">
                   <input type="text" name="last_name" id="last_name" autocomplete="family-name"
-                    class="py-3 px-4 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    class="py-3 px-4 block bg-gray-100 w-full shadow-sm sm:text-sm border-gray-700 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-2">
                 <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
                 <div class="mt-1">
                   <input id="email" name="email" type="email" autocomplete="email"
-                    class="py-3 px-4 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
+                    class="py-3 px-4 block bg-gray-100 w-full shadow-sm sm:text-sm border-gray-700 rounded-md">
                 </div>
               </div>
               <div class="sm:col-span-2">
                 <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
                 <div class="mt-1">
                   <textarea id="message" name="message" rows="4"
-                    class="py-3 px-4 block w-full shadow-sm sm:text-sm border border-gray-300 rounded-md"></textarea>
+                    class="py-3 px-4 block w-full bg-gray-100 shadow-sm sm:text-sm border border-gray-700 rounded-md"></textarea>
                 </div>
               </div>
               <div class="sm:col-span-2">
@@ -275,9 +292,9 @@
 </div>
 
 <!-- advanced footer -->
-<div class="bg-gray-50">
-  <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:px-8">
-    <div class="mt-8 flex justify-center space-x-6">
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto py-2 px-4 sm:px-6 lg:px-8">
+    <div class="mt-4 flex justify-center space-x-6">
       <a href="#" class="text-gray-400 hover:text-gray-500">
         <span class="sr-only">Facebook</span>
         <i class="fab fa-facebook-f"></i>
@@ -295,9 +312,8 @@
         <i class="fab fa-linkedin-in"></i>
       </a>
     </div>
-    <p class="mt-8 text-center text-base text-gray-400">
+    <p class="mt-2 text-center text-base text-gray-400">
       &copy; 2021 Company, Inc. All rights reserved.
     </p>
   </div>
 </div>
-
