--- a/web/src/app/Components/login/login.component.html
+++ b/web/src/app/Components/login/login.component.html
@@ -1,48 +1,53 @@
 <app-alert class="{{alertHidden}}" [message]="alertMessage"></app-alert>
-<div class="flex h-screen bg-gray-100">
-    <div class="m-auto md:w-1/3">
+<div class="flex items-center min-h-screen p-6 bg-gray-100">
+    <div class="flex-1 h-full max-w-2xl mx-auto overflow-hidden">
         <app-logo></app-logo>
-        <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col my-2">
-            <form (ngSubmit)="onSubmit()">
-                <h1 class="text-center text-4xl">Login</h1>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
-                        email
-                    </label>
-                    <input
-                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                        id="email" type="email" name="email" [(ngModel)]="email" placeholder="your email">
-                        <div class="text-red-500 text-xs italic">{{emailError}}</div>
+        <div class="flex flex-col overflow-y-auto bg-white rounded-lg shadow">
+            <div class="flex items-center justify-center px-12 pt-6 pb-4">
+                <div class="w-full">
+                    <form (ngSubmit)="onSubmit()">
+                        <h1 class="text-center text-4xl">Login</h1>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+                                Email<span class="text-red-500">*</span>
+                            </label>
+                            <input
+                                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                id="email" type="email" name="email" [(ngModel)]="email" placeholder="someone@gmail.com">
+                            <div class="text-red-500 text-xs italic">{{emailError}}</div>
+                        </div>
+                        <div class="mb-6">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+                                Password<span class="text-red-500">*</span>
+                            </label>
+                            <input
+                                class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                id="password" type="password" name="password" [(ngModel)]="password"
+                                placeholder="******************">
+                            <div class="text-red-500 text-xs italic">{{pwdError}}</div>
+                        </div>
+                        <a class="inline-block align-baseline py-2 font-bold text-sm text-indigo-500 hover:text-indigo-800"
+                            href="#">
+                            Forgot Password?
+                        </a>
+                        <button
+                            class="block w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+                            type="submit">
+                            Sign In
+                        </button>
+
+                        <div class="flex justify-center mt-4">
+                            <a class="inline-block align-baseline text-center font-bold text-sm text-indigo-500 hover:text-indigo-800"
+                                routerLink="/register">
+                                Already have not an account? Register
+                            </a>
+                        </div>
+                    </form>
                 </div>
-                <div class="mb-6">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-                        Password
-                    </label>
-                    <input
-                        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
-                        id="password" type="password" name="password" [(ngModel)]="password" placeholder="******************">
-                    <p class="text-red-500 text-xs italic hidden">{{pwdError}}</p>
-                </div>
-                <div class="flex items-center justify-between">
-                    <button
-                        class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-                        type="submit">
-                        Sign In
-                    </button>
-                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800" href="#">
-                        Forgot Password?
-                    </a>
-                </div>
-                <div class="flex justify-center mt-4">
-                    <a class="inline-block align-baseline font-bold text-sm text-blue-500 hover:text-blue-800"
-                        routerLink="/register">
-                        Create an Account
-                    </a>
-                </div>
-            </form>
+            </div>
         </div>
-        <p class="text-center text-gray-500 text-xs">
-            &copy;2022 Glorius Future School. All rights reserved.
+        <p class="text-center text-gray-500 text-xs mt-2">
+            &copy;2022 Glorious Future School. All rights reserved.
         </p>
     </div>
 </div>
