--- a/web/src/app/Components/logo/logo.component.html
+++ b/web/src/app/Components/logo/logo.component.html
@@ -3,7 +3,7 @@
         <div class="flex flex-row">
             <img src="assets/images/logo.png" alt="logo" class="h-12 w-12">
             <div class="flex flex-col">
-                <span class="text-3xl font-bold mt-1 mx-2">Glorius</span>
+                <span class="text-3xl font-bold mt-1 mx-2">Glorious</span>
             </div>
         </div>
     </a>
