--- a/web/src/app/Components/model/model.component.html
+++ b/web/src/app/Components/model/model.component.html
@@ -5,19 +5,19 @@
         <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
         <div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full"
             role="dialog" aria-modal="true" aria-labelledby="modal-headline">
-            <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
-
-                <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
-                    <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-                        {{ Title}}
-                    </h3>
-                    <div class="mt-2">
-                        <p class="text-sm text-gray-500 flex-wrap">
+            <div class="border-b-2 border-gray-200 bg-gray-50 text-center pb-3 pt-6">
+                <h3 class="text-3xl leading-6 font-medium text-gray-900" id="modal-headline">
+                    {{ Title}}
+                </h3>
+            </div>
+            <div class="bg-white px-2">
+                <div class="text-center sm:mt-0 sm:ml-4 sm:text-left">
+                    <div class="" id="modalBody">
+                        <div class="text-sm text-gray-500 flex-wrap">
                             {{ Message }}
-                        </p>
+                        </div>
                     </div>
                 </div>
-
             </div>
             <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
                 <button type="button" (click)="handleClose()"
