--- a/web/src/app/pages/principal/classes/classes.component.html
+++ b/web/src/app/pages/principal/classes/classes.component.html
@@ -1,4 +1,5 @@
-<!-- create table in tailwind css -->
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)">
+</app-alert>
 <div class="bg-white mx-4 mt-6 shadow rounded-lg p-4 sm:p-6 xl:p-8 ">
     <div class="mb-4 flex flex-col md:flex-row gap-2 md:justify-between">
         <div>
@@ -28,19 +29,35 @@
                                 </th>
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Email
+                                    Fee/Student
                                 </th>
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Role
+                                    Total Students
                                 </th>
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Applied Date
+                                    Total Subjects
                                 </th>
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
-                                    Actions
+                                    Created Date
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Added By
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Last Modified Date
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Last Modified By
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Action
                                 </th>
                             </tr>
                         </thead>
@@ -54,23 +71,35 @@
                                         {{ class.name }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ class.email }}
+                                        {{ class.feeperstudent }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ class.role }}
+                                        {{ class.students.length }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ class.date }}
+                                        {{ class.subjects.length }}
                                     </td>
-                                    <!-- view and accept button -->
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
+                                        {{ getDate(class.createdDate) }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ class.addedBy }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ getDate(class.lastModifiedDate) }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ class.lastModifiedBy }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        <button (click)="viewModel(class)" class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
                                             <i class="fa-solid fa-eye"></i>
                                         </button>
                                         <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
-                                            <i class="fa-solid fa-check"></i>
+                                            <i class="fa-solid fa-edit"></i>
                                         </button>
-                                        <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
+                                        <button (click)="deleteClass( class._id )"
+                                            class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
                                             <i class="fa-solid fa-xmark"></i>
                                         </button>
                                     </td>
@@ -78,7 +107,7 @@
                             </ng-container>
                             <ng-container *ngIf="classes.length === 0;">
                                 <tr>
-                                    <td colspan="6"
+                                    <td colspan="11"
                                         class="p-4 text-center whitespace-nowrap text-sm font-normal text-gray-900">
                                         No applications found
                                     </td>
@@ -91,3 +120,5 @@
         </div>
     </div>
 </div>
+
+<app-model Title={{modelTitle}} Message={{modelMsg}} isHidden={{isModelHidden}} (onClose)="closeModel()"></app-model>
