--- a/web/src/app/pages/principal/add-clerk/add-clerk.component.html
+++ b/web/src/app/pages/principal/add-clerk/add-clerk.component.html
@@ -1,3 +1,4 @@
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)"></app-alert>
 <div class="mx-2 mt-6 md:mx-5 bg-white p-3 rounded-lg shadow-md overflow-x-auto sm:p-6 xl:p-8">
     <button (click)="onBack()" class="mb-3 text-gray-500 hover:text-gray-700 focus:outline-none focus:text-gray-700">
         <i class="fa-solid fa-circle-arrow-left"></i> Back
