--- a/web/src/app/pages/principal/add-student/add-student.component.html
+++ b/web/src/app/pages/principal/add-student/add-student.component.html
@@ -1,3 +1,4 @@
+<app-alert [isHidden]=isAlertHidden message="{{alertMessage}}" type="{{alertType}}" (close)="handleAlertClose($event)"></app-alert>
 <div class="mx-2 mt-6 md:mx-5 bg-white p-3 rounded-lg shadow-md overflow-x-auto sm:p-6 xl:p-8">
     <button (click)="onBack()" class="mb-3 text-gray-500 hover:text-gray-700 focus:outline-none focus:text-gray-700">
         <i class="fa-solid fa-circle-arrow-left"></i> Back
@@ -26,7 +27,7 @@
             </div>
             <div class="flex flex-row mt-2">
                 <div class="flex flex-col w-1/2">
-                    <label for="occupation" class="text-gray-700">Occupation</label>
+                    <label for="occupation" class="text-gray-700">Father's Occupation</label>
                     <input type="text" name="occupation" [(ngModel)]="occupation"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                     <p class="text-red-600">{{occupationError}}</p>
@@ -43,7 +44,7 @@
                     <label for="subject" class="text-gray-700">Class</label>
                     <select name="class" id="class" [(ngModel)]="selectedClass"
                         class="border rounded-md px-2 py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                        <option *ngFor="let class of classes;" [ngValue]="class">{{class}}</option>
+                        <option *ngFor="let class of classes;" [ngValue]="class._id">{{class.name}}</option>
                     </select>
                     <p class="text-red-600">{{selectedClassError}}</p>
                 </div>
