--- a/web/src/app/pages/principal/clerks/clerks.component.html
+++ b/web/src/app/pages/principal/clerks/clerks.component.html
@@ -57,7 +57,7 @@
                                         {{ clerk.email }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ clerk.salary }}
+                                        Clerk
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                         {{ clerk.date }}
@@ -66,9 +66,6 @@
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
                                         <button class="text-gray-400 hover:text-indigo-500 font-bold py-2 px-4 rounded">
                                             <i class="fa-solid fa-eye"></i>
-                                        </button>
-                                        <button class="text-gray-400 hover:text-green-500 font-bold py-2 px-4 rounded">
-                                            <i class="fa-solid fa-check"></i>
                                         </button>
                                         <button class="text-gray-400 hover:text-red-500 font-bold py-2 px-4 rounded">
                                             <i class="fa-solid fa-xmark"></i>
