--- a/web/src/app/pages/principal/students/students.component.html
+++ b/web/src/app/pages/principal/students/students.component.html
@@ -14,12 +14,13 @@
     <div class="flex flex-col mt-8">
         <div class="mb-2">
             <label for="class" class="text-gray-700 mr-2">Select Class: </label>
-            <select
+            <select (onchange)="getAllStudents()" [(ngModel)]="selectedClass"
                 class="border rounded-md px-2 min-w-[100px] py-1 mt-1 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                <option *ngFor="let class of classes;" [ngValue]="class">{{class}}</option>
+                <option *ngFor="let class of classes;" [ngValue]="class">{{class.name}}</option>
             </select>
         </div>
-        <div class="overflow-x-auto rounded-lg" *ngIf="classes.length > 0 && selectedClass != '' && students.length > 0">
+        <div class="overflow-x-auto rounded-lg"
+            *ngIf="classes.length > 0 && selectedClass != '' && students.length > 0">
             <div class="align-middle inline-block min-w-full">
                 <div class="shadow overflow-hidden sm:rounded-lg">
                     <table class="min-w-full divide-y divide-gray-200">
@@ -32,6 +33,10 @@
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                     Name
+                                </th>
+                                <th scope="col"
+                                    class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                    Father Name
                                 </th>
                                 <th scope="col"
                                     class="p-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -57,10 +62,13 @@
                                         {{ student.name }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ student.rollNo }}
+                                        {{ student.fathername }}
                                     </td>
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
-                                        {{ student.date }}
+                                        {{ student.rollnumber }}
+                                    </td>
+                                    <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
+                                        {{ student.addDate.split('T')[0] }}
                                     </td>
                                     <!-- view and accept button -->
                                     <td class="p-4 whitespace-nowrap text-sm font-semibold text-gray-900">
